--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <body id="home">
     <header>
         <nav class="menu">
+            <label for="toggle">☰</label>
+            <input type="checkbox" id="toggle">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li ><a href="actu.html">Actualité</a></li>
@@ -48,11 +50,11 @@
 
         <div class="menu-footer">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li ><a href="actu.html">Actualité</a></li>
-                <li><a href="evenements.html">Evènements</a></li>
-                <li><a href="realisation.html">Réalisation</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <a href="index.html">Home</a>
+                <a href="actu.html">Actualité</a>
+                <a href="evenements.html">Evènements</a>
+                <a href="realisation.html">Réalisation</a>
+                <a href="contact.html">Contact</a>
             </ul>
         </div>
     </footer>
