--- a/realisation.html
+++ b/realisation.html
@@ -15,6 +15,8 @@
 
     <header>
         <nav class="menu">
+            <label for="toggle">☰</label>
+            <input type="checkbox" id="toggle">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li ><a href="actu.html">Actualité</a></li>
@@ -27,9 +29,8 @@
     </header>
 
     <body id="clip-page">
-
-        <div id="clip-spotify">
             <h1>Liens Spotify</h1>
+        <div id="clip-spotify">
             <iframe class="spotify-element" style="border-radius:12px" src="https://open.spotify.com/embed/track/1UkqGMIxetS1TRMbihMiQg?utm_source=generator&theme=0" width="80%" height="100" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             <iframe class="spotify-element" style="border-radius:12px" src="https://open.spotify.com/embed/track/73J0XZfBhvGgCloBnkXVCP?utm_source=generator" width="80%" height="100" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             <iframe class="spotify-element" style="border-radius:12px" src="https://open.spotify.com/embed/track/2lTg05dfPVSLZAcyM5veiF?utm_source=generator" width="80%" height="100" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
