--- a/actu.html
+++ b/actu.html
@@ -15,6 +15,8 @@
 
     <header>
         <nav class="menu">
+            <label for="toggle">☰</label>
+            <input type="checkbox" id="toggle">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li ><a href="actu.html">Actualité</a></li>
