fansit mis à jour

--- a/fansite/index.html
+++ b/fansite/index.html
@@ -10,7 +10,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poor+Story&family=Rajdhani&family=Roboto&display=swap" rel="stylesheet">
         <title>Fansite Makoto San</title>
-        <embed src="images/slimane-des-milliers-de-je-taime-karaoke (1).mp3" autostart="true" loop="true" hidden="false"></embed>
+        <embed src="images/Des%20milliers%20de%20je%20t'aime%20-%20SLIMANE.mp3" autostart="true" loop="true" hidden="false"></embed>
         
     </head>
 
